# phong-gl-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: camera.h  mesh.h  model.h  renderer.h  shader.h
include/glad/: glad.h
shaders/: phong.frag  phong.vert
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp
